# APIServer

./: CMakeLists.txt  README.md  main.cpp  tests.cpp
html/: APICall.js  index.html  style.css
include/: APIBase.hpp  Application.hpp  Authorization.hpp  FileResponse.hpp  Messaging.hpp  Users.hpp  WebServer.hpp
src/: APIBase.cpp  Authorization.cpp  FileResponse.cpp  Messaging.cpp  Users.cpp  WebServer.cpp
ssl/: cert.pem  key.pem
